// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AlertMessage Custom Style 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
        "marginVertical": 25,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#CCCCCC",
          "fontFamily": "Avenir-Book",
          "fontSize": 17,
          "fontWeight": "bold",
          "marginHorizontal": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      ALERT ALERT
    </Text>
  </View>
</View>
`;

exports[`Storyshots AlertMessage Default 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
        "marginVertical": 25,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#CCCCCC",
          "fontFamily": "Avenir-Book",
          "fontSize": 17,
          "fontWeight": "bold",
          "marginHorizontal": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      ALERT ALERT
    </Text>
  </View>
</View>
`;

exports[`Storyshots AlertMessage Hidden 1`] = `null`;

exports[`Storyshots ConvoCard Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f2f2f2",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 16.5,
        "flexDirection": "column",
        "height": 541,
        "overflow": "hidden",
        "shadowColor": "rgba(0, 0, 0, 0.25)",
        "shadowOffset": Object {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 334,
      }
    }
  >
    <Image
      style={
        Object {
          "alignSelf": "flex-start",
          "borderColor": "black",
          "height": 161,
          "justifyContent": "center",
          "width": 334,
        }
      }
    />
    <View
      style={
        Object {
          "flexDirection": "column",
          "height": 300,
          "justifyContent": "space-around",
          "margin": 32,
          "width": 280,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000000",
            "fontFamily": "SourceSansPro",
            "fontSize": 20,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": -0.1,
            "opacity": 0.75,
          }
        }
      >
        The Origins of Consciousness
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Image
          style={
            Object {
              "borderRadius": 12.5,
              "height": 25,
              "marginRight": 5,
              "width": 25,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
           with Sam Harris 
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.5)",
            "fontFamily": "SourceSansPro",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": -0.23,
          }
        }
      >
        Lets talk about the scientic study of consciousness, where consciousness emerges in nature, and more...
      </Text>
      <View
        style={
          Object {
            "alignContent": "stretch",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "height": 120,
            "paddingBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "paddingRight": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontFamily": "SourceSansPro",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 0.34,
                "opacity": 0.15,
              }
            }
          >
            WHEN
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Wed, 1/25, 4-7pm
          </Text>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontFamily": "SourceSansPro",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 0.34,
                "opacity": 0.15,
              }
            }
          >
            WHERE
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            San Francisco
          </Text>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontFamily": "SourceSansPro",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 0.34,
                "opacity": 0.15,
              }
            }
          >
            KNOWLEDGE DOMAINS
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            consciousness, psychology, psychedelics
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#373737",
            "borderRadius": 8.8,
            "height": 40,
            "opacity": 1,
            "shadowColor": "rgba(0, 0, 0, 0.05)",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
            "width": 270,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginVertical": 10,
              "textAlign": "center",
            }
          }
        >
           Request to join 
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots ConvoCard Lots of content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f2f2f2",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 16.5,
        "flexDirection": "column",
        "height": 541,
        "overflow": "hidden",
        "shadowColor": "rgba(0, 0, 0, 0.25)",
        "shadowOffset": Object {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 334,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "height": 300,
          "justifyContent": "space-around",
          "margin": 32,
          "width": 280,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000000",
            "fontFamily": "SourceSansPro",
            "fontSize": 20,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": -0.1,
            "opacity": 0.75,
          }
        }
      >
        Exploring Inner Worlds: Moving Beyond the Curtain To Places Very Far Away
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
           with Sam Harris 
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.5)",
            "fontFamily": "SourceSansPro",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": -0.23,
          }
        }
      >
        Lets talk about the scientic study of consciousness, where consciousness emerges in nature, and more...
      </Text>
      <View
        style={
          Object {
            "alignContent": "stretch",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "height": 120,
            "paddingBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "paddingRight": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontFamily": "SourceSansPro",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 0.34,
                "opacity": 0.15,
              }
            }
          >
            WHEN
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Wed, 1/25, 4-7pm
          </Text>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontFamily": "SourceSansPro",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 0.34,
                "opacity": 0.15,
              }
            }
          >
            WHERE
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            San Francisco
          </Text>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontFamily": "SourceSansPro",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 0.34,
                "opacity": 0.15,
              }
            }
          >
            KNOWLEDGE DOMAINS
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            consciousness, psychology, psychedelics, science, mysticism, deepak, quantum, yoga
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#373737",
            "borderRadius": 8.8,
            "height": 40,
            "opacity": 1,
            "shadowColor": "rgba(0, 0, 0, 0.05)",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
            "width": 270,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginVertical": 10,
              "textAlign": "center",
            }
          }
        >
           Request to join 
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots DrawerButton Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontFamily": "Avenir-Book",
          "fontSize": 20,
          "marginVertical": 10,
        }
      }
    >
      Drawer Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots FullButton Custom Style 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "blue",
      "borderBottomColor": "#fb5f26",
      "borderBottomWidth": 1,
      "borderTopColor": "#e73536",
      "borderTopWidth": 1,
      "marginVertical": 5,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontFamily": "Avenir-Black",
        "fontSize": 14,
        "margin": 18,
        "textAlign": "center",
      }
    }
  >
    STYLE ME UP!
  </Text>
</View>
`;

exports[`Storyshots FullButton Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(164, 0, 48, 0.5)",
      "borderBottomColor": "#fb5f26",
      "borderBottomWidth": 1,
      "borderTopColor": "#e73536",
      "borderTopWidth": 1,
      "marginVertical": 5,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontFamily": "Avenir-Black",
        "fontSize": 14,
        "margin": 18,
        "textAlign": "center",
      }
    }
  >
    A SIMPLE BUTTON
  </Text>
</View>
`;

exports[`Storyshots RoundedButton Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#e73536",
      "borderRadius": 5,
      "height": 45,
      "justifyContent": "center",
      "marginHorizontal": 25,
      "marginVertical": 10,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 14,
        "fontWeight": "bold",
        "marginVertical": 10,
        "textAlign": "center",
      }
    }
  >
    A simple rounded button
  </Text>
</View>
`;

exports[`Storyshots RoundedButton Text as children 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#e73536",
      "borderRadius": 5,
      "height": 45,
      "justifyContent": "center",
      "marginHorizontal": 25,
      "marginVertical": 10,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 14,
        "fontWeight": "bold",
        "marginVertical": 10,
        "textAlign": "center",
      }
    }
  >
    Hello from the children!
  </Text>
</View>
`;
